--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-loader": "^15.9.3",
     "vue-router": "^3.3.4",
     "vue-template-compiler": "^2.6.11",
+    "vue2-timeago": "^1.2.7",
     "vuetify": "^2.3.7",
     "vuex": "^3.5.1"
   },
